--- a/environment_cu113.yml
+++ b/environment_cu113.yml
@@ -1,4 +1,4 @@
-name: iwslt22
+name: iwslt22_cu113
 
 channels:
 - pytorch
@@ -8,9 +8,9 @@ channels:
 dependencies:
 - pip=22.0.3
 - python=3.7.10
-- pytorch=1.9.0
-- torchaudio=0.9.0
-- cudatoolkit=11.1
+- pytorch=1.10.2
+- torchaudio=0.10.2
+- cudatoolkit=11.3
 - editdistance=0.6.0
 - sacrebleu=1.4.13
 - fairscale=0.4.3
