--- a/config/de_lna_wav2vec_largeGPU.yaml
+++ b/config/de_lna_wav2vec_largeGPU.yaml
@@ -15,8 +15,8 @@ distributed_training:
 
 checkpoint:
   save_dir: ${env:SAVE_DIR}/${env:WANDB_NAME}/ckpts/
-  no_epoch_checkpoints: True
-  save_interval_updates: 300
+  save_interval: 0
+  save_interval_updates: 500
   keep_interval_updates: 10
   keep_best_checkpoints: 5
 
@@ -24,9 +24,12 @@ dataset:
   train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
   valid_subset: dev_mustc
   num_workers: 16
+  batch_size: 64
   max_tokens: 2_160_000                   # 135s @ 16kHz
   max_tokens_valid: 4_800_000             # 300s @ 16kHz
-  batch_size: 64
+  validate_interval: 0
+  validate_interval_updates: 500
+  validate_after_updates: 7_812           # ~4 epochs
   skip_invalid_size_inputs_valid_test: True
 
 task:
@@ -96,11 +99,14 @@ optimizer:
   adam_eps: 1e-08
 
 optimization:
-  lr: [5e-05]
-  max_update: 15_632               # ~16 epochs
-  update_freq: [32]                # with 1 GPU
+  lr: [1e-04]
+  max_update: 31_248                      # ~16 epochs
+  update_freq: [16]                       # with 1 GPU
   clip_norm: 20.0
+  sentence_avg: True
 
 lr_scheduler:
-  _name: inverse_sqrt
-  warmup_updates: 1_563            # ~10% of training
+  _name: tri_stage
+  phase_ratio: [0.15, 0.15, 0.7]
+  init_lr_scale: 0.01
+  final_lr_scale: 0.01
