--- a/config/de_lna_hubert_2.5e-4_smallGPU.yaml
+++ b/config/de_lna_hubert_2.5e-4_smallGPU.yaml
@@ -11,32 +11,29 @@ common:
   wandb_project: ${env:WANDB_PROJECT}
 
 distributed_training:
-  find_unused_parameters: True
+  heartbeat_timeout: 180
 
 checkpoint:
   save_dir: ${env:SAVE_DIR}/${env:WANDB_NAME}/ckpts/
   save_interval_updates: 500
-  keep_interval_updates: 10
-  keep_best_checkpoints: 5
+  no_last_checkpoints: True
+  keep_best_checkpoints: 0
 
 dataset:
   train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
   valid_subset: dev_mustc
   num_workers: 8
+  batch_size: 18
+  required_batch_size_multiple: 1
   max_tokens: 480_000             # 30s @ 16kHz
-  max_tokens_valid: 1_440_000   # 3x
-  validate_interval_updates: 500
-  validate_after_updates: 8_272           # ~4 epochs
-  batch_size: 24
-  skip_invalid_size_inputs_valid_test: True
+  disable_validation: True
 
 task:
   _name: speech_to_text
   data: ${env:DATA_ROOT}/en-de
-  max_source_positions: 480_000           # 30s @ 16kHz
+  max_source_positions: 400_000           # 30s @ 16kHz
   max_target_positions: 1024
   sampling_ratios: 1,1,1,1,1,1,1
-  eval_bleu: True
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
@@ -45,10 +42,6 @@ task:
     pitch: 0,0
     echo_delay: 20,200
     echo_decay: 0.05,0.2
-  knowledge_distillation:
-    path: ${env:KD_ROOT}/en-de
-    loss_lambda: 0                        # Set 0 to deactivate
-    temperature: 1
 
 model:
   _name: s2t_pretrained
@@ -97,8 +90,8 @@ optimizer:
   adam_eps: 1e-08
 
 optimization:
-  lr: [1e-04]
-  max_update: 33088             # ~16 epochs
+  lr: [2.5e-04]
+  max_update: 32_272             # ~16 epochs
   update_freq: [64]                # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
