--- a/config/de_lna_adapters_wav2vec_1e-4_smallGPU.yaml
+++ b/config/de_lna_adapters_wav2vec_1e-4_smallGPU.yaml
@@ -25,13 +25,13 @@ dataset:
   num_workers: 8
   batch_size: 18
   required_batch_size_multiple: 1
-  max_tokens: 480_000             # 30s @ 16kHz
+  max_tokens: 480_000                     # 30s @ 16kHz
   disable_validation: True
 
 task:
   _name: speech_to_text
   data: ${env:DATA_ROOT}/en-de
-  max_source_positions: 400_000           # 30s @ 16kHz
+  max_source_positions: 400_000           # 25s @ 16kHz
   max_target_positions: 1024
   sampling_ratios: 1,1,1,1,1,1,1
   eval_gen_config:
@@ -76,11 +76,11 @@ model:
     layers_to_freeze:
       - r".*embed_tokens\..*|.*embed_positions\..*|.*layernorm_embedding\..*" # Embeddings
       - r".*layers\..*\.self_attn\..*"                                        # Self-attention
-      - r".*layers\..*\.fc[1-2]\..*"  
+      - r".*layers\..*\.fc[1-2]\..*"                                          # FFN
     adapters:
       apply_at_cross_attn: False
       apply_at_self_attn: True
-      apply_at_ffn: True                                        # FFN
+      apply_at_ffn: True
     dropout: 0.0
     attention_dropout: 0.0
     cross_attention_dropout: 0.1
@@ -98,8 +98,8 @@ optimizer:
 
 optimization:
   lr: [1e-04]
-  max_update: 32_272             # ~16 epochs
-  update_freq: [64]                # with 1 GPU
+  max_update: 32_272                      # ~16 epochs
+  update_freq: [64]                       # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
 
