--- a/config/de_lna_kd_1_hubert_2.5e-4_smallGPU.yaml
+++ b/config/de_lna_kd_1_hubert_2.5e-4_smallGPU.yaml
@@ -26,13 +26,13 @@ dataset:
   num_workers: 8
   batch_size: 16
   required_batch_size_multiple: 2
-  max_tokens: 400_000                     # 30s @ 16kHz
+  max_tokens: 360_000                     # 30s @ 16kHz
   disable_validation: True
 
 task:
   _name: speech_to_text
   data: ${env:DATA_ROOT}/en-de
-  max_source_positions: 400_000           # 25s @ 16kHz
+  max_source_positions: 360_000           # 25s @ 16kHz
   max_target_positions: 1024
   sampling_ratios: 1,1,1,1,1,1,1
   eval_gen_config:
@@ -43,12 +43,15 @@ task:
     pitch: 0,0
     echo_delay: 20,200
     echo_decay: 0.05,0.2
+  knowledge_distillation:
+    path: ${env:KD_ROOT}/en-de
+
 
 model:
   _name: s2t_pretrained
 
   encoder:
-    path: ${env:MODELS_ROOT}/wav2vec2/wav2vec_vox_960h_pl.pt
+    path: ${env:MODELS_ROOT}/hubert/hubert_large_ll60k_finetune_ls960.pt
     layers_to_freeze:
       - r".*feature_extractor\..*|.*post_extract_proj\..*|.*pos_conv\..*"     # Feature extractor
       - r".*encoder\.layers\..*\.fc[1-2]\..*"                                 # FFN
@@ -81,8 +84,10 @@ model:
     activation_dropout: 0.0
 
 criterion:
-  _name: label_smoothed_cross_entropy
-  label_smoothing: 0.2
+  _name: cross_entropy_with_kd
+  teacher_lambda: 1
+  teacher_temperature: 1.3
+  teacher_ignore_prefix_size: 0
   ignore_prefix_size: 1
 
 optimizer:
