--- a/config/de_lna_kd_0.75_hubert_2.5e-4_smallGPU.yaml
+++ b/config/de_lna_kd_0.75_hubert_2.5e-4_smallGPU.yaml
@@ -8,6 +8,7 @@ common:
   seed: 48151623
   fp16: True
   memory_efficient_fp16: True
+  empty_cache_freq: 20
   wandb_project: ${env:WANDB_PROJECT}
 
 distributed_training:
@@ -23,15 +24,15 @@ dataset:
   train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
   valid_subset: dev_mustc
   num_workers: 8
-  batch_size: 18
-  required_batch_size_multiple: 1
-  max_tokens: 480_000                     # 30s @ 16kHz
+  batch_size: 16
+  required_batch_size_multiple: 2
+  max_tokens: 360_000                     # 30s @ 16kHz
   disable_validation: True
 
 task:
   _name: speech_to_text
   data: ${env:DATA_ROOT}/en-de
-  max_source_positions: 400_000           # 25s @ 16kHz
+  max_source_positions: 360_000           # 25s @ 16kHz
   max_target_positions: 1024
   sampling_ratios: 1,1,1,1,1,1,1
   eval_gen_config:
@@ -45,6 +46,7 @@ task:
   knowledge_distillation:
     path: ${env:KD_ROOT}/en-de
 
+
 model:
   _name: s2t_pretrained
 
@@ -53,9 +55,6 @@ model:
     layers_to_freeze:
       - r".*feature_extractor\..*|.*post_extract_proj\..*|.*pos_conv\..*"     # Feature extractor
       - r".*encoder\.layers\..*\.fc[1-2]\..*"                                 # FFN
-    adapters:
-      apply_at_self_attn: False
-      apply_at_ffn: True
     length_adaptor:
       in_channels: 1024
       mid_channels: 1024
@@ -79,10 +78,6 @@ model:
       - r".*embed_tokens\..*|.*embed_positions\..*|.*layernorm_embedding\..*" # Embeddings
       - r".*layers\..*\.self_attn\..*"                                        # Self-attention
       - r".*layers\..*\.fc[1-2]\..*"                                          # FFN
-    adapters:
-      apply_at_cross_attn: False
-      apply_at_self_attn: True
-      apply_at_ffn: True
     dropout: 0.0
     attention_dropout: 0.0
     cross_attention_dropout: 0.1
@@ -90,7 +85,7 @@ model:
 
 criterion:
   _name: cross_entropy_with_kd
-  teacher_lambda: 0.5
+  teacher_lambda: 0.75
   teacher_temperature: 1.3
   teacher_ignore_prefix_size: 0
   ignore_prefix_size: 1
