--- a/config/ja_lna_hubert_2.5e-4_smallGPU.yaml
+++ b/config/ja_lna_hubert_2.5e-4_smallGPU.yaml
@@ -19,10 +19,10 @@ checkpoint:
   save_interval_updates: 500
   no_last_checkpoints: True
   keep_best_checkpoints: 0
-  restore_file: ${env:SAVE_DIR}/${env:WANDB_NAME}/ckpts/checkpoint_15_32000.pt
+  no_epoch_checkpoints: True
 
 dataset:
-  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
+  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost
   valid_subset: dev_mustc
   num_workers: 8
   batch_size: 16
@@ -32,10 +32,10 @@ dataset:
 
 task:
   _name: speech_to_text
-  data: ${env:DATA_ROOT}/en-de
+  data: ${env:DATA_ROOT}/en-ja
   max_source_positions: 400_000           # 25s @ 16kHz
   max_target_positions: 1024
-  sampling_ratios: 1,1,1,1,1,1,1
+  sampling_ratios: 1,1,1,1
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
@@ -49,7 +49,7 @@ model:
   _name: s2t_pretrained
 
   encoder:
-    path: ${env:MODELS_ROOT}/wav2vec2/wav2vec_vox_960h_pl.pt
+    path: ${env:MODELS_ROOT}/hubert/hubert_large_ll60k_finetune_ls960.pt
     layers_to_freeze:
       - r".*feature_extractor\..*|.*post_extract_proj\..*|.*pos_conv\..*"     # Feature extractor
       - r".*encoder\.layers\..*\.fc[1-2]\..*"                                 # FFN
@@ -93,8 +93,8 @@ optimizer:
 
 optimization:
   lr: [2.5e-04]
-  max_update: 32_272                      # ~16 epochs
-  update_freq: [64]                       # with 1 GPU
+  max_update: 31_680                      # ~16 epochs
+  update_freq: [80]                       # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
 
