--- a/config/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU_ft_smallGPU.yaml
+++ b/config/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU_ft_smallGPU.yaml
@@ -10,49 +10,62 @@ common:
   memory_efficient_fp16: True
   empty_cache_freq: 10
   wandb_project: ${env:WANDB_PROJECT}
+  # comment this when restarting from OOM
+  reset_logging: True
 
 distributed_training:
   heartbeat_timeout: 180
 
 checkpoint:
   save_dir: ${env:SAVE_DIR}/${env:WANDB_NAME}/ckpts/
-  save_interval_updates: 500
+  save_interval_updates: 250
   no_last_checkpoints: True
   keep_best_checkpoints: 0
-  restore_file: ${env:SAVE_DIR}/${env:WANDB_NAME}/ckpts/checkpoint_15_32000.pt
+  # comment this when restarting from OOM
+  finetune_from_model: ${env:SAVE_DIR}/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU/ckpts/checkpoint_avg_5_around_24500.pt
+  # restore_file: ${env:SAVE_DIR}/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU_ft_smallGPU/ckpts/...
+
 
 dataset:
-  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
+  train_subset: train_mustc
   valid_subset: dev_mustc
   num_workers: 8
-  batch_size: 16
+  batch_size: 8
   required_batch_size_multiple: 1
-  max_tokens: 400_000                     # 30s @ 16kHz
+  max_tokens: 360_000                     # 30s @ 16kHz
   disable_validation: True
 
 task:
   _name: speech_to_text
   data: ${env:DATA_ROOT}/en-de
-  max_source_positions: 400_000           # 25s @ 16kHz
+  max_source_positions: 360_000           # 25s @ 16kHz
   max_target_positions: 1024
-  sampling_ratios: 1,1,1,1,1,1,1
+  sampling_ratios: 1
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
-    p_augm: 0.8                           # Set 0 to deactivate
+    p_augm: 0                           # Set 0 to deactivate
     tempo: 0.85,1.3
     pitch: 0,0
     echo_delay: 20,200
     echo_decay: 0.05,0.2
+  # knowledge_distillation:
+  #   path: ${env:KD_ROOT}/en-de
+
 
 model:
   _name: s2t_pretrained
 
   encoder:
-    path: ${env:MODELS_ROOT}/wav2vec2/wav2vec_vox_960h_pl.pt
+    path: ${env:MODELS_ROOT}/hubert/hubert_large_ll60k_finetune_ls960.pt
     layers_to_freeze:
       - r".*feature_extractor\..*|.*post_extract_proj\..*|.*pos_conv\..*"     # Feature extractor
       - r".*encoder\.layers\..*\.fc[1-2]\..*"                                 # FFN
+    adapters:
+      apply_at_self_attn: False
+      apply_at_ffn: True
+      adapter_dim: 512
+      adapter_scale: 4
     length_adaptor:
       in_channels: 1024
       mid_channels: 1024
@@ -76,6 +89,12 @@ model:
       - r".*embed_tokens\..*|.*embed_positions\..*|.*layernorm_embedding\..*" # Embeddings
       - r".*layers\..*\.self_attn\..*"                                        # Self-attention
       - r".*layers\..*\.fc[1-2]\..*"                                          # FFN
+    adapters:
+      apply_at_cross_attn: False
+      apply_at_self_attn: True
+      apply_at_ffn: True
+      adapter_dim: 512
+      adapter_scale: 4
     dropout: 0.0
     attention_dropout: 0.0
     cross_attention_dropout: 0.1
@@ -83,8 +102,15 @@ model:
 
 criterion:
   _name: label_smoothed_cross_entropy
-  label_smoothing: 0.2
+  label_smoothing: 0.1
   ignore_prefix_size: 1
+
+# criterion:
+#   _name: cross_entropy_with_kd
+#   teacher_lambda: 1
+#   teacher_temperature: 1.3
+#   teacher_ignore_prefix_size: 0
+#   ignore_prefix_size: 1
 
 optimizer:
   _name: adam
@@ -92,14 +118,14 @@ optimizer:
   adam_eps: 1e-08
 
 optimization:
-  lr: [2.5e-04]
-  max_update: 32_272                      # ~16 epochs
-  update_freq: [64]                       # with 1 GPU
+  lr: [1e-05]
+  max_update: 4400                      # find the number
+  update_freq: [80]                       # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
 
 lr_scheduler:
   _name: tri_stage
-  phase_ratio: [0.15, 0.15, 0.7]
+  phase_ratio: [0.125, 0., 0.875]
   init_lr_scale: 0.01
   final_lr_scale: 0.01
