--- a/config/de_lna_adapters_hubert_2.5e-4_largeGPU_ft_smallGPU.yaml
+++ b/config/de_lna_adapters_hubert_2.5e-4_largeGPU_ft_smallGPU.yaml
@@ -8,7 +8,6 @@ common:
   seed: 48151623
   fp16: True
   memory_efficient_fp16: True
-  empty_cache_freq: 10
   wandb_project: ${env:WANDB_PROJECT}
   # comment this when restarting from OOM
   reset_logging: True
@@ -44,7 +43,7 @@ task:
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
-    p_augm: 0.                           # Set 0 to deactivate
+    p_augm: 0.2                         # Set 0 to deactivate
     tempo: 0.85,1.3
     pitch: 0,0
     echo_delay: 20,200
@@ -99,7 +98,7 @@ model:
 
 criterion:
   _name: label_smoothed_cross_entropy
-  label_smoothing: 0.1
+  label_smoothing: 0.2
   ignore_prefix_size: 1
 
 optimizer:
