--- a/config/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU_ft_smallGPU.yaml
+++ b/config/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU_ft_smallGPU.yaml
@@ -8,7 +8,6 @@ common:
   seed: 48151623
   fp16: True
   memory_efficient_fp16: True
-  empty_cache_freq: 10
   wandb_project: ${env:WANDB_PROJECT}
   # comment this when restarting from OOM
   reset_logging: True
@@ -22,8 +21,8 @@ checkpoint:
   no_last_checkpoints: True
   keep_best_checkpoints: 0
   # comment this when restarting from OOM
-  finetune_from_model: ${env:SAVE_DIR}/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU/ckpts/checkpoint_avg_5_around_24500.pt
-  # restore_file: ${env:SAVE_DIR}/de_lna_adapters_kd_1_hubert_2.5e-4_largeGPU_ft_smallGPU/ckpts/...
+  finetune_from_model: ${env:SAVE_DIR}/de_lna_adapters_kd_0.5_hubert_2.5e-4_largeGPU/ckpts/checkpoint_avg_5_around_29000.pt
+  # restore_file: ${env:SAVE_DIR}/de_lna_adapters_kd_0.5_hubert_2.5e-4_largeGPU_ft_smallGPU/ckpts/...
 
 
 dataset:
@@ -44,13 +43,13 @@ task:
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
-    p_augm: 0                           # Set 0 to deactivate
+    p_augm: 0.2                           # Set 0 to deactivate
     tempo: 0.85,1.3
     pitch: 0,0
     echo_delay: 20,200
     echo_decay: 0.05,0.2
-  # knowledge_distillation:
-  #   path: ${env:KD_ROOT}/en-de
+  knowledge_distillation:
+    path: ${env:KD_ROOT}/en-de
 
 
 model:
@@ -101,16 +100,11 @@ model:
     activation_dropout: 0.0
 
 criterion:
-  _name: label_smoothed_cross_entropy
-  label_smoothing: 0.1
+  _name: cross_entropy_with_kd
+  teacher_lambda: 0.5
+  teacher_temperature: 1.3
+  teacher_ignore_prefix_size: 0
   ignore_prefix_size: 1
-
-# criterion:
-#   _name: cross_entropy_with_kd
-#   teacher_lambda: 1
-#   teacher_temperature: 1.3
-#   teacher_ignore_prefix_size: 0
-#   ignore_prefix_size: 1
 
 optimizer:
   _name: adam
