--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,9 @@ channels:
 dependencies:
 - pip=22.0.3
 - python=3.7.10
+- numpy=1.21.2
+- pandas=1.3.5
+- pyyaml=6.0
 - pytorch=1.11.0
 - torchaudio=0.11.0
 - cudatoolkit=11.5
@@ -21,10 +24,10 @@ dependencies:
 - datasets=2.0.0
 - nltk=3.6.7
 - num2words=0.5.10
-- numpy=1.22.3
-- pandas=1.4.1
+- numpy=1.21.2
+- pandas=1.3.5
 - pyyaml=6.0
-- sacremoses=0.0.47
+- sacremoses=0.0.49
 - tqdm=4.62.3
 - transformers=4.16.2
 
