[UPD] Clean config files

--- a/config/de_lna_hubert_1e-4.yaml
+++ b/config/de_lna_hubert_1e-4.yaml
@@ -8,7 +8,6 @@ common:
   seed: 48151623
   fp16: True
   memory_efficient_fp16: True
-  empty_cache_freq: 10
   wandb_project: ${env:WANDB_PROJECT}
 
 distributed_training:
@@ -23,10 +22,10 @@ checkpoint:
 dataset:
   train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
   valid_subset: dev_mustc
-  num_workers: 8
-  batch_size: 16
+  num_workers: 16
+  batch_size: 32
   required_batch_size_multiple: 1
-  max_tokens: 400_000                     # 30s @ 16kHz
+  max_tokens: 1_150_000                   # ~70s @ 16kHz
   disable_validation: True
   
 task:
@@ -92,8 +91,8 @@ optimizer:
 
 optimization:
   lr: [1e-04]
-  max_update: 32_272                      # ~16 epochs
-  update_freq: [64]                       # with 1 GPU
+  max_update: 32_512                      # ~16 epochs
+  update_freq: [24]                       # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
 
