--- a/config/zh_lna_hubert_2.5e-4.yaml
+++ b/config/zh_lna_hubert_2.5e-4.yaml
@@ -20,20 +20,20 @@ checkpoint:
   keep_best_checkpoints: 0
 
 dataset:
-  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
+  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost
   valid_subset: dev_mustc
-  num_workers: 8
-  batch_size: 18
+  num_workers: 16
+  batch_size: 32
   required_batch_size_multiple: 1
-  max_tokens: 480_000                     # 30s @ 16kHz
+  max_tokens: 1_150_000                   # ~70s @ 16kHz
   disable_validation: True
 
 task:
   _name: speech_to_text
-  data: ${env:DATA_ROOT}/en-de
+  data: ${env:DATA_ROOT}/en-zh
   max_source_positions: 400_000           # 25s @ 16kHz
   max_target_positions: 1024
-  sampling_ratios: 1,1,1,1,1,1,1
+  sampling_ratios: 1,1,1,1
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
@@ -42,14 +42,12 @@ task:
     pitch: 0,0
     echo_delay: 20,200
     echo_decay: 0.05,0.2
-  knowledge_distillation:
-    path: ${env:KD_ROOT}/en-de
 
 model:
   _name: s2t_pretrained
 
   encoder:
-    path: ${env:MODELS_ROOT}/wav2vec2/wav2vec_vox_960h_pl.pt
+    path: ${env:MODELS_ROOT}/hubert/hubert_large_ll60k_finetune_ls960.pt
     layers_to_freeze:
       - r".*feature_extractor\..*|.*post_extract_proj\..*|.*pos_conv\..*"     # Feature extractor
       - r".*encoder\.layers\..*\.fc[1-2]\..*"                                 # FFN
@@ -82,10 +80,8 @@ model:
     activation_dropout: 0.0
 
 criterion:
-  _name: cross_entropy_with_kd
-  teacher_lambda: 0.5
-  teacher_temperature: 1.3
-  teacher_ignore_prefix_size: 0
+  _name: label_smoothed_cross_entropy
+  label_smoothing: 0.2
   ignore_prefix_size: 1
 
 optimizer:
@@ -94,9 +90,9 @@ optimizer:
   adam_eps: 1e-08
 
 optimization:
-  lr: [1e-04]
-  max_update: 32_272                      # ~16 epochs
-  update_freq: [64]                       # with 1 GPU
+  lr: [2.5e-04]
+  max_update: 33_360                      # ~16 epochs
+  update_freq: [24]                       # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
 
