--- a/config/de_lna_adapters_kd_0.25_hubert_2.5e-4.yaml
+++ b/config/de_lna_adapters_kd_0.25_hubert_2.5e-4.yaml
@@ -9,45 +9,41 @@ common:
   fp16: True
   memory_efficient_fp16: True
   wandb_project: ${env:WANDB_PROJECT}
-  reset_logging: True
 
 distributed_training:
   heartbeat_timeout: 180
 
 checkpoint:
   save_dir: ${env:SAVE_DIR}/${env:WANDB_NAME}/ckpts/
-  save_interval_updates: 250
+  save_interval_updates: 500
   no_last_checkpoints: True
   keep_best_checkpoints: 0
-  finetune_from_model: ${env:SAVE_DIR}/de_lna_adapters_kd_0.5_hubert_2.5e-4_largeGPU/ckpts/checkpoint_avg_5_around_29000.pt
-
 
 dataset:
-  train_subset: train_mustc
+  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
   valid_subset: dev_mustc
-  num_workers: 8
-  batch_size: 8
+  num_workers: 16
+  batch_size: 32
   required_batch_size_multiple: 1
-  max_tokens: 360_000                     # 30s @ 16kHz
+  max_tokens: 1_150_000                   # ~70s @ 16kHz
   disable_validation: True
 
 task:
   _name: speech_to_text
   data: ${env:DATA_ROOT}/en-de
-  max_source_positions: 360_000           # 25s @ 16kHz
+  max_source_positions: 400_000           # 25s @ 16kHz
   max_target_positions: 1024
-  sampling_ratios: 1
+  sampling_ratios: 1,1,1,1,1,1,1
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
-    p_augm: 0.2                           # Set 0 to deactivate
+    p_augm: 0.8                           # Set 0 to deactivate
     tempo: 0.85,1.3
     pitch: 0,0
     echo_delay: 20,200
     echo_decay: 0.05,0.2
   knowledge_distillation:
     path: ${env:KD_ROOT}/en-de
-
 
 model:
   _name: s2t_pretrained
@@ -58,10 +54,10 @@ model:
       - r".*feature_extractor\..*|.*post_extract_proj\..*|.*pos_conv\..*"     # Feature extractor
       - r".*encoder\.layers\..*\.fc[1-2]\..*"                                 # FFN
     adapters:
-      apply_at_self_attn: False
-      apply_at_ffn: True
       adapter_dim: 512
       adapter_scale: 4
+      apply_at_self_attn: False
+      apply_at_ffn: True
     length_adaptor:
       in_channels: 1024
       mid_channels: 1024
@@ -86,11 +82,11 @@ model:
       - r".*layers\..*\.self_attn\..*"                                        # Self-attention
       - r".*layers\..*\.fc[1-2]\..*"                                          # FFN
     adapters:
+      adapter_dim: 512
+      adapter_scale: 4
       apply_at_cross_attn: False
       apply_at_self_attn: True
       apply_at_ffn: True
-      adapter_dim: 512
-      adapter_scale: 4
     dropout: 0.0
     attention_dropout: 0.0
     cross_attention_dropout: 0.1
@@ -98,7 +94,7 @@ model:
 
 criterion:
   _name: cross_entropy_with_kd
-  teacher_lambda: 0.5
+  teacher_lambda: 0.25
   teacher_temperature: 1.3
   teacher_ignore_prefix_size: 0
   ignore_prefix_size: 1
@@ -109,14 +105,14 @@ optimizer:
   adam_eps: 1e-08
 
 optimization:
-  lr: [1e-05]
-  max_update: 4400                      # find the number
-  update_freq: [80]                       # with 1 GPU
+  lr: [2.5e-04]
+  max_update: 32_512                      # ~16 epochs
+  update_freq: [24]                       # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
 
 lr_scheduler:
   _name: tri_stage
-  phase_ratio: [0.125, 0., 0.875]
+  phase_ratio: [0.15, 0.15, 0.7]
   init_lr_scale: 0.01
   final_lr_scale: 0.01
