--- a/config/de_lna_wav2vec_2.5e-4.yaml
+++ b/config/de_lna_wav2vec_2.5e-4.yaml
@@ -8,7 +8,6 @@ common:
   seed: 48151623
   fp16: True
   memory_efficient_fp16: True
-  empty_cache_freq: 5
   wandb_project: ${env:WANDB_PROJECT}
 
 distributed_training:
@@ -19,23 +18,22 @@ checkpoint:
   save_interval_updates: 500
   no_last_checkpoints: True
   keep_best_checkpoints: 0
-  no_epoch_checkpoints: True
 
 dataset:
-  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost
+  train_subset: train_mustc,train_covost,train_dev_covost,train_test_covost,train_europarl,train_dev_europarl,train_test_europarl
   valid_subset: dev_mustc
-  num_workers: 8
-  batch_size: 16
+  num_workers: 16
+  batch_size: 32
   required_batch_size_multiple: 1
-  max_tokens: 400_000                     # 30s @ 16kHz
+  max_tokens: 1_150_000                   # ~70s @ 16kHz
   disable_validation: True
 
 task:
   _name: speech_to_text
-  data: ${env:DATA_ROOT}/en-zh
+  data: ${env:DATA_ROOT}/en-de
   max_source_positions: 400_000           # 25s @ 16kHz
   max_target_positions: 1024
-  sampling_ratios: 1,1,1,1
+  sampling_ratios: 1,1,1,1,1,1,1
   eval_gen_config:
     prefix_size: 1
   data_augmentation:
@@ -49,7 +47,7 @@ model:
   _name: s2t_pretrained
 
   encoder:
-    path: ${env:MODELS_ROOT}/hubert/hubert_large_ll60k_finetune_ls960.pt
+    path: ${env:MODELS_ROOT}/wav2vec2/wav2vec_vox_960h_pl.pt
     layers_to_freeze:
       - r".*feature_extractor\..*|.*post_extract_proj\..*|.*pos_conv\..*"     # Feature extractor
       - r".*encoder\.layers\..*\.fc[1-2]\..*"                                 # FFN
@@ -93,8 +91,8 @@ optimizer:
 
 optimization:
   lr: [2.5e-04]
-  max_update: 31_680                      # ~16 epochs
-  update_freq: [80]                       # with 1 GPU
+  max_update: 32_512                      # ~16 epochs
+  update_freq: [24]                       # with 1 GPU
   clip_norm: 20.0
   sentence_avg: True
 
